base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: hello-spring-boot
    app.kubernetes.io/instance: hello-spring-boot
    app.kubernetes.io/part-of: hello-spring-boot
  name: hello-spring-boot
spec:
  ports:
  - name: 8080-tcp
    port: 8080
